@@ -43,6 +43,7 @@ static void compatInit(Compatibility_t &c)
     c.fix_npc55_kick_ice_blocks = false;
     c.fix_climb_invisible_fences = true;
     c.fix_climb_bgo_speed_adding = true;
+    c.enable_climb_bgo_layer_move = true;
 }
 
 static void loadCompatIni(Compatibility_t &c, const std::string &fileName)
@@ -65,6 +66,7 @@ static void loadCompatIni(Compatibility_t &c, const std::string &fileName)
     compat.read("fix-npc55-kick-ice-blocks", c.fix_npc55_kick_ice_blocks, c.fix_npc55_kick_ice_blocks);
     compat.read("fix-climb-invisible-fences", c.fix_climb_invisible_fences, c.fix_climb_invisible_fences);
     compat.read("fix-climb-bgo-speed-adding", c.fix_climb_bgo_speed_adding, c.fix_climb_bgo_speed_adding);
+    compat.read("enable-climb-bgo-layer-move", c.enable_climb_bgo_layer_move, c.enable_climb_bgo_layer_move);
     compat.endGroup();
 }
 
