@@ -12,6 +12,7 @@ Changes for 1.3.3.2
 -Added the "compat.ini" support for episode and level specific to enable/disable certain bugs of the old game
 -Fixed the vanilla bug: player can get clipped into floor while standing on a block of a down-moving layer
 -Fixed the vanilla bug: NPC can get clipped into floor while standing on a block of a down-moving layer
+-Fence BGOs now can move player together with a moving layer as vine NPCs does
 
 Changes for 1.3.3.1
 -Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
